[gd_scene load_steps=6 format=3 uid="uid://duuoxelgisixc"]

[ext_resource type="Texture2D" uid="uid://c5xv85mc6apai" path="res://Textures/Save_Slots.png" id="1_8jemr"]
[ext_resource type="Script" path="res://Scripts/SaveSlots.gd" id="1_srd57"]
[ext_resource type="Texture2D" uid="uid://bgdbxn7jiw3u5" path="res://Textures/Save_Slots_Button.png" id="2_dpb3f"]
[ext_resource type="FontFile" uid="uid://be224af47s08" path="res://Aunchantedxspace-ogg4.ttf" id="4_s6byu"]

[sub_resource type="LabelSettings" id="LabelSettings_jpjrv"]
font = ExtResource("4_s6byu")
font_size = 50

[node name="SaveSlots" type="Node2D"]
script = ExtResource("1_srd57")

[node name="BgSprite" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(960, 540)
texture = ExtResource("1_8jemr")

[node name="Label1" type="Label" parent="."]
offset_left = 16.0
offset_top = 18.0
offset_right = 512.0
offset_bottom = 106.0
text = "SAVE FILE 1"
label_settings = SubResource("LabelSettings_jpjrv")

[node name="Label2" type="Label" parent="."]
offset_left = 16.0
offset_top = 232.0
offset_right = 512.0
offset_bottom = 320.0
text = "SAVE FILE 2"
label_settings = SubResource("LabelSettings_jpjrv")

[node name="Label3" type="Label" parent="."]
offset_left = 16.0
offset_top = 446.0
offset_right = 512.0
offset_bottom = 534.0
text = "SAVE FILE 3"
label_settings = SubResource("LabelSettings_jpjrv")

[node name="Label4" type="Label" parent="."]
offset_left = 16.0
offset_top = 660.0
offset_right = 512.0
offset_bottom = 748.0
text = "SAVE FILE 4"
label_settings = SubResource("LabelSettings_jpjrv")

[node name="Label5" type="Label" parent="."]
offset_left = 16.0
offset_top = 874.0
offset_right = 512.0
offset_bottom = 962.0
text = "SAVE FILE 5
"
label_settings = SubResource("LabelSettings_jpjrv")

[node name="MenuButton" type="Button" parent="."]
offset_left = 1785.0
offset_top = 6.0
offset_right = 1893.0
offset_bottom = 114.0
scale = Vector2(1.2, 1.2)
icon = ExtResource("2_dpb3f")
flat = true

[node name="SlotButton1" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 8.0
offset_top = 12.0
offset_right = 1721.0
offset_bottom = 213.0

[node name="SlotButton2" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 8.0
offset_top = 226.0
offset_right = 1721.0
offset_bottom = 427.0

[node name="SlotButton3" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 8.0
offset_top = 439.0
offset_right = 1721.0
offset_bottom = 640.0

[node name="SlotButton4" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 8.0
offset_top = 651.0
offset_right = 1721.0
offset_bottom = 852.0

[node name="SlotButton5" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 8.0
offset_top = 864.0
offset_right = 1721.0
offset_bottom = 1065.0

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="SlotButton1" to="." method="_on_slot_button_1_pressed"]
[connection signal="pressed" from="SlotButton2" to="." method="_on_slot_button_2_pressed"]
[connection signal="pressed" from="SlotButton3" to="." method="_on_slot_button_3_pressed"]
[connection signal="pressed" from="SlotButton4" to="." method="_on_slot_button_4_pressed"]
[connection signal="pressed" from="SlotButton5" to="." method="_on_slot_button_5_pressed"]
